--- a/awesomebonus/NAMESPACE
+++ b/awesomebonus/NAMESPACE
@@ -4,6 +4,9 @@ export(ridgereg)
 export(ridgereg_model)
 export(visualize_airport_delays)
 exportClasses(ridgereg)
-importFrom(cowplot,plot_grid)
+import(dplyr)
+import(ggplot2)
+import(maps)
 importFrom(ggplot2,ggplot)
 importFrom(methods,new)
+importFrom(stats,na.omit)
