--- a/awesomebonus/NAMESPACE
+++ b/awesomebonus/NAMESPACE
@@ -9,4 +9,5 @@ import(ggplot2)
 import(maps)
 importFrom(ggplot2,ggplot)
 importFrom(methods,new)
+importFrom(rlang,.data)
 importFrom(stats,na.omit)
