--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,4 @@ language: r
 cache: packages
 before_install:
   - cd awesomebonus
-env:
-  global:
-    - R_BUILD_ARGS="--no-build-vignettes"
+r_build_args: --no-build-vignettes
